--- a/angular.json
+++ b/angular.json
@@ -32,7 +32,12 @@
             "styles": [
               "src/styles.scss"
             ],
-            "scripts": []
+            "scripts": [],
+            "stylePreprocessorOptions": {
+              "includePaths": [
+                "./src/assets/styles"
+              ]
+            }
           },
           "configurations": {
             "production": {
@@ -48,6 +53,12 @@
                   "maximumError": "4kb"
                 }
               ],
+              "fileReplacements": [
+                {
+                    "replace": ":src/environment/envoronment.developmen.ts",
+                    "with": "src/environment/envoronment.ts"
+              }
+            ],
               "outputHashing": "all"
             },
             "development": {
@@ -56,7 +67,13 @@
               "vendorChunk": true,
               "extractLicenses": false,
               "sourceMap": true,
-              "namedChunks": true
+              "namedChunks": true,
+              "fileReplacements": [
+                {
+                  "replace": "src/environments/environment.ts",
+                  "with": "src/environments/environment.development.ts"
+                }
+              ]
             }
           },
           "defaultConfiguration": "production"
@@ -100,5 +117,8 @@
         }
       }
     }
+  },
+  "cli": {
+    "analytics": "1221eef7-17e3-425a-9787-b99b4f1501fd"
   }
 }
